src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Clone_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source campaign used to clone donation forms on current campaign.</description>
        <inlineHelpText>Populated and used internally by roundCause.</inlineHelpText>
        <label>Clone Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Duration__c</fullName>
        <description>Formula field returning the duration of the campaign in seconds.</description>
        <formula>IF(OR(ISBLANK(rC_Giving__Start_Date_Time__c), ISBLANK(rC_Giving__End_Date_Time__c)), 0, 60 * 60 * 24 * (rC_Giving__End_Date_Time__c - rC_Giving__Start_Date_Time__c))</formula>
        <inlineHelpText>Duration of the campaign in seconds.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__First_Response_Date__c</fullName>
        <description>Populated automatically Date the first response was received against the campaign</description>
        <inlineHelpText>Date the first response was received against the campaign</inlineHelpText>
        <label>First Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Form_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, look up to the form mapping record related to this campaign.</description>
        <inlineHelpText>Look up to the form mapping record related to this campaign.</inlineHelpText>
        <label>Form Mapping</label>
        <referenceTo>rC_Connect__Form_Mapping__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Generate_Ask_Amounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Ask Amounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Last_Response_Date__c</fullName>
        <description>Automatically populated. Displays the last day a response is received against the campaign</description>
        <inlineHelpText>Displays the last day a response is received against the campaign</inlineHelpText>
        <label>Last Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Meta_Tag_Description__c</fullName>
        <description>Defines a brief description of your campaign form that will be displayed below the Title and Site Name when the form is shared on social media sites, for example.</description>
        <inlineHelpText>Defines a brief description of your campaign form that will be displayed below the Title and Site Name when the form is shared on social media sites, for example.</inlineHelpText>
        <label>Meta Tag: Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Meta_Tag_Image_Url__c</fullName>
        <description>Defines the URL of any images that should accompany your Form Title and Description, when shared on social media sites. External image URL only.</description>
        <inlineHelpText>Defines the URL of any images that should accompany your Form Title and Description, when shared on social media sites. External image URL only.</inlineHelpText>
        <label>Meta Tag: Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Meta_Tag_Site_Name__c</fullName>
        <description>Defines the shortened site name for your campaign form, which will be displayed below the Title when shared on social media sites.</description>
        <inlineHelpText>Defines the shortened site name for your campaign form, which will be displayed below the Title when shared on social media sites.</inlineHelpText>
        <label>Meta Tag: Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Meta_Tag_Title__c</fullName>
        <description>Defines the title of your campaign form, which will displayed when shared on social media sites.</description>
        <inlineHelpText>Defines the title of your campaign form, which will displayed when shared on social media sites.</inlineHelpText>
        <label>Meta Tag: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Meta_Tag_URL__c</fullName>
        <description>Defines the Site URL to your campaign form, which will be displayed below the form description when shared on social media sites.</description>
        <inlineHelpText>Defines the Site URL to your campaign form, which will be displayed below the form description when shared on social media sites.</inlineHelpText>
        <label>Meta Tag: URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Payment_Processor__c</fullName>
        <description>Selects which payment processor to use based on values populated in &apos;Sage Merchant&apos; and &apos;Heartland Merchant&apos; lookups. If no value is present, the system uses the value in Payment_Method_setting__c.Default_Payment_Processor__c</description>
        <inlineHelpText>Selects which payment processor to use based on values populated in &apos;Sage Merchant&apos; and &apos;Heartland Merchant&apos; lookups.</inlineHelpText>
        <label>Payment Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Unsolicited_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of gifts from Accounts where none of the Contacts associated to the Account are in the Campaign Members.</description>
        <inlineHelpText>Number of gifts from Accounts where none of the Contacts associated to the Account are in the Campaign Members.</inlineHelpText>
        <label>Unsolicited Gifts #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Added_To_Waitlist_Text__c</fullName>
        <label>Added To Waitlist Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Attended__c</fullName>
        <description>Rollup field to calculate campaign members with Attendance Status as &quot;Attended&quot;.</description>
        <inlineHelpText>Rollup field to calculate campaign members with Attendance Status as &quot;Attended&quot;.</inlineHelpText>
        <label>Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.rC_Event__Attendance_Status__c</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Event__Available_Registered_Count__c</fullName>
        <description>Auto populated, indicates the number of available seats left for an Event.</description>
        <inlineHelpText>Number of Available seats left for an Event.</inlineHelpText>
        <label>Available Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Available_Waitlisted_Count__c</fullName>
        <description>Auto populated, indicates the number of available waitlist seats left for an Event.</description>
        <inlineHelpText>Number of Available waitlist seats left for an Event.</inlineHelpText>
        <label>Available Waitlisted Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Custom_Registration_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the checkbox is checked, then a custom registration period can be defined.</inlineHelpText>
        <label>Custom Registration Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__End_Date_Time__c</fullName>
        <description>Specify the End Date/Time.</description>
        <inlineHelpText>Specify the End Date/Time.</inlineHelpText>
        <label>Event End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Event_Code__c</fullName>
        <description>Internal Event Code.</description>
        <inlineHelpText>Internal Event Code.</inlineHelpText>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Event_Subtype__c</fullName>
        <description>Used if &quot;Other&quot; is chosen on the Event Type Picklist.</description>
        <inlineHelpText>Used to indicate &quot;Other&quot; Event Type.</inlineHelpText>
        <label>Event Sub-Type</label>
        <picklist>
            <controllingField>rC_Event__Event_Type__c</controllingField>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Event_Type__c</fullName>
        <description>Manually populated, Reflects the Kind of Event being held.</description>
        <inlineHelpText>Reflects the Kind of Event being held.</inlineHelpText>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiothon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telethon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Attendance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated. If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Attributes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Chatter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Details?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Form?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, if checked, the tab won&apos;t show up in the Events Wizard</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Meals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Meals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Members?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Seating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Seating?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Sessions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard</inlineHelpText>
        <label>Hide Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Tickets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Tickets?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Hidden_Tab_Venues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated.  If checked, the tab won&apos;t show up in the Events Wizard.</description>
        <inlineHelpText>Check to hide the tab in the Events Wizard.</inlineHelpText>
        <label>Hide Venues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__No_Show__c</fullName>
        <description>Rollup field to calculate campaign members with Attendance Status as &quot;No Show&quot;.</description>
        <inlineHelpText>Rollup field to calculate campaign members with Attendance Status as &quot;No Show&quot;.</inlineHelpText>
        <label>No Show</label>
        <summaryFilterItems>
            <field>CampaignMember.rC_Event__Attendance_Status__c</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Event__Parent_Name__c</fullName>
        <description>Manually populated, Indicates the Parent Campaign under which this campaign exists in the hierarchy.</description>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Parent Campaign under which this campaign exists in the hierarchy.</inlineHelpText>
        <label>Parent Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Pricebook_Link__c</fullName>
        <description>Populated by formula, provides the hyperlink to the Pricebook related to this Event.</description>
        <formula>IF(NOT(ISBLANK(rC_Event__Pricebook__c)), HYPERLINK(&apos;/&apos; + rC_Event__Pricebook__c, rC_Event__Pricebook_Name__c, &apos;_self&apos;), &apos;Not assigned&apos;) + &apos; [&apos; + HYPERLINK(&apos;/apex/rc_events__campaign_managepricebooks?id=&apos; +  Id, &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos;</formula>
        <inlineHelpText>Hyperlink to the Pricebook related to this Event.</inlineHelpText>
        <label>Pricebook Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Pricebook_Name__c</fullName>
        <description>Auto populated, provides the &quot;Pricebook Name&quot; related to this Event.</description>
        <inlineHelpText>Hyperlink to the &quot;Pricebook Name&quot; related to this Event.</inlineHelpText>
        <label>Pricebook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Pricebook__c</fullName>
        <description>Auto populated, provides the ID for the Pricebook related to this Event.</description>
        <inlineHelpText>ID for the Pricebook related to this Event.</inlineHelpText>
        <label>Pricebook ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Primary_Venue__c</fullName>
        <description>Auto Rolls up the address of the Primary Venue including Street, City, State, Postal Code &amp; Country.</description>
        <inlineHelpText>Indicates the address of the Primary Venue.</inlineHelpText>
        <label>Primary Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Count__c</fullName>
        <description>Auto Populated, indicates the number of Attendees registered for this Event.</description>
        <inlineHelpText>Number of Attendees registered for this Event.</inlineHelpText>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Full_Date__c</fullName>
        <description>Auto populated, indicates the date and time the registration limit for an Event is met.</description>
        <inlineHelpText>Date and time the registration limit for an Event is met.</inlineHelpText>
        <label>Registration Full Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Full_Text__c</fullName>
        <description>Manually populated, shows text displayed when an individual attempts to register for an Event and the registration limit for the Event has been previously reached.</description>
        <inlineHelpText>Text displayed when an individual attempts to register for an Event and the registration limit for the Event has been previously reached.</inlineHelpText>
        <label>Registration Full Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Limit__c</fullName>
        <description>Manually populated, Indicates the maximum number of Event Attendees that can register for an Event.</description>
        <inlineHelpText>Maximum number of Event Attendees that can register for this Event.</inlineHelpText>
        <label>Registration Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Status__c</fullName>
        <description>Automatically populated, Describes the  availability to register for an Event.</description>
        <inlineHelpText>Describes the  availability to register for an Event.</inlineHelpText>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overbooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registration_Closed_Message__c</fullName>
        <description>This text will show up when the registration form link is clicked if registration is closed.</description>
        <inlineHelpText>This text will show up when the registration form link is clicked if registration is closed.</inlineHelpText>
        <label>Registration Closed Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registration_Edit_Deadline__c</fullName>
        <label>Registration Edit Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registration_End_Date_Time__c</fullName>
        <description>If populated this is the Date and Time that registration will close.</description>
        <inlineHelpText>If populated this is the Date and Time that registration will close.</inlineHelpText>
        <label>Registration End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registration_Landing_Page__c</fullName>
        <description>This text will show up when a registrant clicks submit on the form.</description>
        <inlineHelpText>This text will show up when a registrant clicks submit on the form.</inlineHelpText>
        <label>Registration Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registration_Start_Date_Time__c</fullName>
        <description>If populated this is the Date and Time that registration will open.</description>
        <inlineHelpText>If populated this is the Date and Time that registration will open.</inlineHelpText>
        <label>Registration Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Rollup_Members__c</fullName>
        <description>Auto populated, displays the most recent Campaign Members last modified date.</description>
        <inlineHelpText>Displays the most recent Campaign Members last modified date.</inlineHelpText>
        <label>Rollup Members</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Rollup_Venues__c</fullName>
        <description>Auto populated, displays the most recent Venues last modified date.</description>
        <inlineHelpText>Displays the most recent Venues last modified date.</inlineHelpText>
        <label>Rollup Venues</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Session_Status__c</fullName>
        <description>Automatically populated, Describes the  availability to register for a Session within an Event.</description>
        <inlineHelpText>Describes the  availability to register for a Session/Group witnin an Event.</inlineHelpText>
        <label>Session Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full - Waitlist Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full - Waitlist Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Special_Instructions__c</fullName>
        <description>Special instructions for the event.</description>
        <inlineHelpText>Special instructions for the event.</inlineHelpText>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Start_Date_Time__c</fullName>
        <description>Specify the Start Date/Time.</description>
        <inlineHelpText>Specify the Start Date/Time.</inlineHelpText>
        <label>Event Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Time_Zone__c</fullName>
        <description>Default Time Zone is as selected on User record.Specify the Time Zone in which calendar needs to be displayed instead of converting to the current User time zone.</description>
        <inlineHelpText>Specify the Time Zone in which calendar needs to be displayed.</inlineHelpText>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) Magadan Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+11:30) Norfolk Islands Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Philippine Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+06:00) Yekaterinburg Time (Asia/Yekaterinburg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Venue_Count__c</fullName>
        <description>Populated by trigger, reflects the number of Venues assigned to an Event.</description>
        <inlineHelpText>Number of Venues assigned to an Event.</inlineHelpText>
        <label>Venue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Waitlisted_Count__c</fullName>
        <description>Auto Populated, indicates the number of Attendees added to an Event&apos;s Waitlist.</description>
        <inlineHelpText>Number of Attendees added to an Event&apos;s Waitlist.</inlineHelpText>
        <label>Waitlisted Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Waitlisted_Full_Date__c</fullName>
        <description>Auto populated, indicates the date and time the waitlist limit for an Event is met.</description>
        <inlineHelpText>Date and time the waitlist limit for an Event is met.</inlineHelpText>
        <label>Waitlisted Full Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Waitlisted_Full_Text__c</fullName>
        <description>Manually populated, shows text displayed when an individual attempts to register for an Event and the waitlist limit for the Event has been previously reached.</description>
        <inlineHelpText>Text displayed when an individual attempts to register for an Event and the waitlist limit for the Event has been previously reached.</inlineHelpText>
        <label>Waitlisted Full Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Waitlisted_Limit__c</fullName>
        <description>Manually populated, Indicates the maximum number of Event Attendees that can be added to an Event&apos;s Waitlist.</description>
        <inlineHelpText>Maximum number of Event Attendees that can be added to an Event&apos;s Waitlist.</inlineHelpText>
        <label>Waitlist Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Waitlisted_Status__c</fullName>
        <description>Automatically populated, describes the  availability to be added to an Event&apos;s Waitlist.</description>
        <inlineHelpText>Describes the  availability to be added to an Event&apos;s Waitlist.</inlineHelpText>
        <label>Waitlist Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overbooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>